force-app/main/default/objects/Case_value_changes__c/Case_value_changes__c.object-meta.xml
<CustomObject>
    <description>QCC : This object is used to store the history of case status</description>
    <label>Case value changes</label>
    <nameField>
        <displayFormat>cvc-{0000000000}</displayFormat>
        <label>Case value changes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case value changes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>