force-app/main/default/objects/Case_value_changes__c/fields/Case_Status_Changed_Duration__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_Changed_Duration__c</fullName>
    <description>This field is used to store the case status changing duration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Status Duration</label>
    <length>200</length>
    <type>Text</type>
</CustomField>