force-app/main/default/objects/Case_value_changes__c/fields/Field_Value_Changed_For__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Changed_For__c</fullName>
    <description>This field is created as per CRM - 5138</description>
    <label>Field Value Changed For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>