force-app/main/default/objects/Case_value_changes__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>This field is used to calculate the case status changing hours</description>
    <label>Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>