force-app/main/default/objects/Case_value_changes__c/fields/Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date_Time__c</fullName>
    <description>This field is used to store the case status modified time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Modified Date/Time</label>
    <type>DateTime</type>
</CustomField>