force-app/main/default/objects/Case_value_changes__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>This field is used to store the case new status value</description>
    <encryptionScheme>None</encryptionScheme>
    <label>New Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>