force-app/main/default/objects/Case_value_changes__c/fields/Total_Case_Status_Duration_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Case_Status_Duration_in_minutes__c</fullName>
    <description>This field is used to store the status changing minutes</description>
    <label>Total Case Status Duration in minutes</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>