force-app/main/default/objects/Case_value_changes__c/recordTypes/Customer_Connect.recordType-meta.xml
<RecordType>
    <fullName>Customer_Connect</fullName>
    <active>true</active>
    <description>This recordtype is created as per CRM - 5132</description>
    <label>Customer Connect</label>
</RecordType>